<resources>
    <string name="app_name">AndroidCodingTest1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Enter</string>
    <string name="memorise_password">Memorise password</string>
    <string name="forget_password">Forget password?</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
</resources>